--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 config.py
 constants.py
 migrations/
+nohup.out
+forever.txt
 # Created by https://www.toptal.com/developers/gitignore/api/python,react,flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,react,flask
 
