--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+Flask-GoogleCharts==0.1.0
 idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
